--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <img src="./img/social-twitter.svg" alt="" />
           </a>
         </div>
-        <p>© 2021 Starbucks Coffee Company. All rights reserved.</p>
+        <p>© 2022 ebookswright. All rights reserved.</p>
       </div>
     </footer>
 
